--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Yacine Aslimi, Data addict/title>
+		<title>Yacine Aslimi, Data addict</title>
 	</head>
 	<body>
 		<nav>
