--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:yacine.aslimi@gmail.com">email</a></li>
-        		<li><a href="https://github.com/YacineAslimi">github.com/YacineAslimi/a></li>
+        		<li><a href="https://github.com/YacineAslimi">github.com/YacineAslimi</a></li>
 			</ul>
 		</footer>
 	</body>
