--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
+		
 		<div class="container">
+	         ---
+                layout: default
+                title: Yacine Aslimi, data addict
+                ---
+
     		<div class="blurb">
         		<h1>Hi there, I'm Yacine Aslimi!</h1>
 				<p>I'm a French engineering student specialize in<em> DataScience</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
