--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     		<ul>
         		<li><a href="mailto:yacine.aslimi@gmail.com">email</a></li>
         		<li><a href="https://github.com/YacineAslimi">github.com/YacineAslimi</a></li>
+        	        <li><a href="https://fr.linkedin.com/in/yacine-aslimi-3418a8106">LinkedIn</a></li>
+        		<li><a href="http://yacineaslimi.esy.es/">Website/YacineAslimi</a></li>
 			</ul>
 		</footer>
 	</body>
