--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     		<div class="blurb">
         		<h1>Hi there, I'm Yacine Aslimi!</h1>
-				<p>I'm a French engineering student specialize in<em> DataScience</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a French engineering student specialize in<em> DataScience</em>. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
@@ -31,7 +31,7 @@
         		<li><a href="mailto:yacine.aslimi@gmail.com">email</a></li>
         		<li><a href="https://github.com/YacineAslimi">github.com/YacineAslimi</a></li>
         	        <li><a href="https://fr.linkedin.com/in/yacine-aslimi-3418a8106">LinkedIn</a></li>
-        		<li><a href="http://yacineaslimi.esy.es/">Website/YacineAslimi</a></li>
+        		<li><a href="http://yacineaslimi.esy.es/">Website</a></li>
 			</ul>
 		</footer>
 	</body>
